<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">


    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MapsActivity"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-56dp" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bNV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/bottom_nav_menu" />

    <HorizontalScrollView
        android:id="@+id/scrollBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toTopOf="@+id/bNV"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/fBtnEcomob"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:drawableLeft="@drawable/filter_ecomob_vector_24"
                android:text="@string/ecomob"
                android:textColor="@color/black"
                app:backgroundTint="@color/default_button_color" />

            <Button
                android:id="@+id/fBtnPlastic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:drawableLeft="@drawable/filter_plastic_vector24"
                android:text="@string/plastic"
                android:textColor="@color/black"
                app:backgroundTint="@color/default_button_color" />

            <Button
                android:id="@+id/fBtnBatteries"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:drawableLeft="@drawable/filter_battery_vector24"
                android:text="@string/batteries"
                android:textColor="@color/black"
                app:backgroundTint="@color/default_button_color" />

            <Button
                android:id="@+id/fBtnClothes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:drawableLeft="@drawable/filter_clothes_vector24"
                android:text="@string/clothes"
                android:textColor="@color/black"
                app:backgroundTint="@color/default_button_color" />

            <Button
                android:id="@+id/fBtnGlass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:drawableLeft="@drawable/filter_glass_vector24"
                android:text="@string/glass"
                android:textColor="@color/black"
                app:backgroundTint="@color/default_button_color" />

            <Button
                android:id="@+id/fBtnLight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:drawableLeft="@drawable/filter_lamps_vector_24"
                android:text="@string/light"
                android:textColor="@color/black"
                app:backgroundTint="@color/default_button_color" />

            <Button
                android:id="@+id/fBtnMetal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:drawableLeft="@drawable/filter_metal_vector24"
                android:text="@string/metal"
                android:textColor="@color/black"
                app:backgroundTint="@color/default_button_color" />

            <Button
                android:id="@+id/fBtnPaper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:drawableLeft="@drawable/filter_paper_vector24"
                android:text="@string/paper"
                android:textColor="@color/black"
                app:backgroundTint="@color/default_button_color" />

        </LinearLayout>

    </HorizontalScrollView>

    <Switch
        android:id="@+id/DayNightSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/DayNightImage"
        app:layout_constraintTop_toTopOf="@+id/map" />

    <ImageView
        android:id="@+id/DayNightImage"
        android:layout_width="53dp"
        android:layout_height="46dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/icons8_sun_64"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>